--- a/mindwave_testing.ipynb
+++ b/mindwave_testing.ipynb
@@ -41,8 +41,7 @@
     "from IPython.display import clear_output\n",
     "from matplotlib import pyplot as plt\n",
     "import collections\n",
-    "import numpy as np\n",
-    "%matplotlib inline"
+    "import numpy as np"
    ]
   },
   {
